# OddTrust

./: .env.example  CONTRIBUTING.md  README.md  TESTING_REPORT.md  package-lock.json  package.json  pnpm-lock.yaml
apps/backend/: .env.example  Dockerfile  README.md  docker-compose.yml
apps/backend/src/: main.ts
apps/backend/src/__tests__/: api.test.ts
apps/backend/src/api/: server.ts
apps/backend/src/chain/: oracle.ts  types.ts
apps/backend/src/config/: env.ts
apps/web/: .env.example  Dockerfile  Dockerfile.ws  docker-compose.yml  next.config.ts  package.json  worker.ts  ws-server.ts
apps/web/.next/: BUILD_ID  build-manifest.json  fallback-build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.js  required-server-files.json  trace  trace-build
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api-error.ts  config.ts  cors.ts  init.ts  metrics.ts  postgres.ts  queue.ts  rate-limit.ts  redis.ts  route-helpers.ts
apps/web/scripts/: setup-env.ts
oddtrust-oracle/: Anchor.toml  package.json
oddtrust-oracle/programs/oddtrust-oracle/: Cargo.toml
oddtrust-oracle/programs/oddtrust-oracle/src/: constants.rs  error.rs  events.rs  lib.rs
oddtrust-oracle/programs/oddtrust-oracle/src/instructions/: init_config.rs  mod.rs  query_trust.rs  submit_check.rs  trading_agent_check.rs
oddtrust-oracle/programs/oddtrust-oracle/src/state/: config.rs  fixture_trust.rs  mod.rs
oddtrust-oracle/scripts/: init-config.ts
oddtrust-oracle/tests/: demo.ts  oracle.test.ts  tsconfig.json
(+173 files in other folders)
