[package]
name = "oddtrust-oracle"
version = "0.1.0"
description = "Created with Anchor"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "oddtrust_oracle"

[features]
default = ["init-if-needed"]
cpi = ["no-entrypoint", "init-if-needed"]
no-entrypoint = []
no-log-ix-name = []
init-if-needed = ["anchor-lang/init-if-needed"]
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.1.2"

[dev-dependencies]
litesvm = "0.10.0"
sha2 = "0.10"
borsh = "1.7"
solana-instruction = "3.0.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
